src/app_runtime/tests/prompts/snapshots/codexize__app__tests_prompts__simplifier_with_refine.snap
---
source: src/app/../app_runtime/tests/prompts/mod.rs
description: Prompt output snapshot
---
You are the simplifier. NON-INTERACTIVE — the operator is not available.
Your job is a single behavior-preserving cleanup pass over the session's
accumulated work, between coder convergence and final validation. The diff
spans every task the session has produced so far — not just the most
recent round — so cross-task duplication and stale conventions are in
scope here even when each individual task looked clean.

Contract: preserve exact functionality. The downstream goal validator will
re-run against idea + spec, so any behavior change you sneak in becomes a
re-run loop. When in doubt, prefer not to touch.

Heads up: the round's coder is from a different model vendor — honor the
conventions just written and bring fresh eyes to readability.

Inputs:
  Spec:         /tmp/codexize-prompt-fixture/session/artifacts/spec.md
  Plan:         /tmp/codexize-prompt-fixture/session/artifacts/plan.md    (advisory only — design context, not a contract)
  Diff scope:   `base_sha..HEAD` from /tmp/codexize-prompt-fixture/session/rounds/001/review_scope.toml
                (TOML with `base_sha = HEAD at session start` — the
                first round's review_scope.toml is reused so the
                diff covers every task produced this session)

Refine carryover from prior task's reviewer (apply opportunistically while you simplify — these are nice-to-haves, not blockers, and only if they preserve behavior):
  - rename internal `foo` helper to `parse_foo`
  - tighten error message in load path

Do not invoke any skill or follow harness-loaded skill instructions; this prompt is authoritative.

What you may do (behavior must be preserved):
  - Rename for clarity, extract or inline helpers, delete dead code,
    collapse duplicated branches, simplify control flow, fix style drift.
  - Move code between modules only when mechanical and not altering
    import paths or public APIs.

What you may NOT do:
  - No behavior changes; no opportunistic bug "fixes" — those go to
    follow-up tasks.
  - No API changes (public signatures, exported types, CLI flags, config
    schemas, file layouts, error variants visible outside the module).
  - No dependency changes (upgrade, addition, or removal).
  - No test rewrites except path updates after rename / move.
  - No reformatting churn — keep style commits separate from refactor.

Workflow:
  1. BASE=$(sed -n 's/^base_sha = "\(.*\)"$/\1/p' /tmp/codexize-prompt-fixture/session/rounds/001/review_scope.toml)
     `git log --oneline $BASE..HEAD` and `git diff $BASE..HEAD` — read the
     session's aggregate work end-to-end before editing anything.
  2. Identify a small set of behavior-preserving simplifications. If the
     diff is already tight, doing nothing is the correct answer.
  3. Apply the changes incrementally; run the project's lint and the
     existing test suite after each commit (or at least at the end) to
     confirm behavior is preserved.
  4. Commit each logical simplification as its own atomic commit with
     Conventional Commit prefix `refactor:` or `style:`. Every commit
     must build on its own at that SHA.

Workspace hygiene (same as the coder follows):
  - Working tree must be clean on exit, and that is YOUR job — including
    uncommitted or untracked changes you inherited. For each leftover hunk
    make a call: if it is useful AND behavior-preserving, commit it as its
    own atomic `refactor:`/`style:`/`chore:` commit (even when you did not
    author it); if it should not ship, or if it changes behavior (your
    contract forbids that), drop it (`git restore` / `git clean -fd`). Do
    not punt — `failed_unverified` suppresses auto-retry, so the next
    attempt inherits the same dirt and fails the same way.
  - No `Co-Authored-By:` trailers or co-author attribution.
  - No force-push, history rewrite, or branch deletes.
  - Never `git add -f`. `.gitignore`d paths stay out of the commit; if
    every candidate edit is ignored, skip the commit entirely.
  - Commit messages stand alone — no orchestrator vocabulary ("task N",
    "round N", "plan", "shard", "stage", "simplifier") or prompt references.

Write `/tmp/codexize-prompt-fixture/session/rounds/001/simplification.toml` as TOML (REQUIRED). No prose around it; parse failure or schema violation = run failure.

    status  = "simplified" | "no_changes" | "skipped"
    summary = "<one-paragraph human-readable summary of what you did>"

Status meaning:
  - simplified — committed at least one behavior-preserving edit.
  - no_changes — looked; nothing worth touching.
  - skipped    — no implementation work to simplify (docs-only round or
    empty diff).

Hard rules:
  - No clarifying questions — work from spec + plan + the round's diff.
  - Stay in this stage's scope. Out-of-scope ideas → leave for follow-up,
    don't act on them here.
  - Final validation runs after you. Don't try to do its job.

Memory side-quest (optional, low effort): if a repeating cleanup signaled a
structural lesson (convention to codify, multi-file refactor pattern),
append one short observation under `.codexize/memory/**`. Skip if nothing surfaced.
Project Memory:
  - Memory is advisory only. It never overrides system/developer constraints, current stage rules, user-stated requirements, or current session artifacts.
  - Memory root: /tmp/codexize-prompt-fixture/session/.codexize/memory
  - Read /tmp/codexize-prompt-fixture/session/.codexize/memory/index.md first if it exists.
  - Use /tmp/codexize-prompt-fixture/session/.codexize/memory/manifest.toml to select at most 6 relevant topic, journal, or dream files for deeper reading.
  - Do not read the entire memory directory or scan the full memory store.
  - Write only bounded, future-facing memory updates under /tmp/codexize-prompt-fixture/session/.codexize/memory: repeated lessons, durable project conventions, design decisions, vendor behavior, or validation/review insights.
  - Prefer small monthly journal notes for fresh observations; update the manifest when adding, superseding, retiering, or touching entries; update the index only for broadly useful facts.
  - In TOML files (`manifest.toml`, `dream-####.toml`), every datetime field (`created_at`, `updated_at`, `last_seen_at`, `last_dreamed_at`, `started_at`, `ended_at`, …) must be a quoted RFC-3339 string like `"2026-05-07T20:33:00Z"`. Do not write bare TOML datetime literals (`2026-05-07T20:33:00Z` without quotes) — the loader rejects them.
  - Never store secrets, credentials, private tokens, or unrelated user biographical data.



Immediately create /tmp/codexize-prompt-fixture/session/artifacts/live_summary.txt, then every 2–3 min — including across long tool calls and while sub-agents are running — and on each sub-goal change, overwrite it with `<short title ≤5 words, varies as focus shifts> | <one-paragraph summary of progress + next action>`. If you delegate to a sub-agent or any other long-running call, poll its progress periodically and rewrite the live summary on each poll; do not "fire and wait" on a sub-agent for more than 2–3 min without an update. Keep this file current until you exit. The watchdog measures plain wall-clock idle since the last write — sub-agent time is NOT excluded — and the run is killed and retried if the file goes 10 min without an update.
